Refactor death items sorting (#361)
Signed-off-by: Byron Marohn <combustible@live.com>